--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,18 @@
-   spring:
-    datasource:
-      username: postgres
-      url: jdbc:postgresql://localhost:5432/restapi
-      password: postgres
-    jpa:
-      hibernate:
-        ddl-auto: update
-      show-sql: true
-    jwt:
-      secret_key: Java8IsTheBest
-      server:
-        error:
-          include-message: always
+spring:
+  datasource:
+    username: postgres
+    url: jdbc:postgresql://localhost:5432/restaurant
+    password: postgres
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+  jwt:
+    secret_key: Java8IsTheBest
+    server:
+      error:
+        include-message: always
+
+
+
 
