--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,9 @@ spring:
     password: postgres
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
   jwt:
     secret_key: Java8IsTheBest
     server:
